fix  text-truncate in search result

--- a/modules/cde/public/css/style.css
+++ b/modules/cde/public/css/style.css
@@ -213,7 +213,6 @@ div.row .native-question-oneline-l {
     margin-top: 6px;
     margin-right: 5px;
     background-color: white;
-    padding: 0 5px 0 5px;
 }
 
 .native-box {
